--- a/css/style.css
+++ b/css/style.css
@@ -77,4 +77,5 @@ a{text-decoration: none;}
   position: absolute; left: 0; top: 0;
   background-repeat: no-repeat;
   background-size: cover;
+  z-index: 20;
 }
