--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ a{text-decoration: none;}
 .lb_wrap .right > div{
   display: flex;
   margin: 70px auto;
-  justify-content: center; gap: 10%;
+  justify-content: space-between; gap: 10%;
   align-items: center;
   width: 80%;
 }
@@ -185,12 +185,12 @@ a{text-decoration: none;}
 }
 .lb_wrap .right > div.three .otherimg{
   display: flex; justify-content: space-between;
-  gap: 10%;
+  gap: 60px;
 }
-.lb_wrap .right > div.three .otherimg p:nth-child(1){
+.lb_wrap .right > div.three .otherimg a:nth-child(1) p{
   border-radius: 0 30% 0 0;
 }
-.lb_wrap .right > div.three .otherimg p:nth-child(2){
+.lb_wrap .right > div.three .otherimg a:nth-child(2) p{
   border-radius: 50% 50% 0 0;
 }
 .lb_wrap .right > div p img{
@@ -258,8 +258,36 @@ a{text-decoration: none;}
 .lb_wrap.s4 .right .three h3 span::after{
   background-image: url(../images/section5_textdeco_othercolor.png);
 }
+
 /* section5 시작 */
+.lb_wrap.s5 .left h1{
+  color: #fff;
+}
+.lb_wrap.s5 .right .three h3{
+  color: #1D451E;
+}
+.lb_wrap.s5 .right .three h3 span::after{
+  background-image: url(../images/section6_textdeco_othercolor.png);
+}
+
 /* section6 시작 */
+.lb_wrap.s6 .right > div.three .otherimg{
+  flex-direction: column; gap: 60px; 
+}
+.lb_wrap.s6 .right > div.three .otherimg div{
+  display: flex; gap: 60px;
+}
+
+.lb_wrap.s6 .right > div.three .otherimg div:nth-child(2) a:nth-child(1) p{
+  border-radius: 30% 0 0 0;
+}
+.lb_wrap.s6 .right > div.three .otherimg div:nth-child(2) p:nth-child(2){
+width: 48%; aspect-ratio: 1 / 1.15;
+}
+.lb_wrap.s6 .right > div.three .otherimg div:nth-child(2) p:nth-child(2):hover:after{
+  content: none;
+}
+
 
 
 /* section7 시작 */
@@ -302,6 +330,7 @@ a{text-decoration: none;}
   width: 55%; min-width: 400px;
 }
 #section7 > p img{width: 100%; height: 100%;}
+
 
 /* footer 시작 */
 #footer{
