--- a/css/style.css
+++ b/css/style.css
@@ -48,22 +48,34 @@ a{text-decoration: none;}
 
 /* section0 시작 */
 #section0{width: 100%; height: 100vh;}
-#section0 .slide{
+.swiper {
+  width: 100%;
+  height: 100%;
   position: relative;
 }
-#section0 .slide .intro img{
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.swiper-slide img {
+  display: block;
   position: absolute;
   left: 0; top: 0;
 }
-#section0 .slide .intro img:nth-child(1),
-#section0 .slide .intro img:nth-child(2){
+.swiper-slide img:nth-child(1),
+.swiper-slide img:nth-child(2){
   width: 100%; height: 100%; object-fit: cover;
 }
-#section0 .slide .intro img:nth-child(3){
+.swiper-slide img:nth-child(3){
   width: 25%; min-width: 250px;
   left: 50%; top: 50%;
   transform: translate(-50%, -50%);
 }
+.swiper-pagination{}
 
 
 /* section1 시작 */
